--- a/style.css
+++ b/style.css
@@ -136,3 +136,10 @@ h1 {
     text-decoration: underline;
 }
 
+/* Media Query for Mobile Devices */
+@media only screen and (max-width: 768px) {
+    .feature img {
+        max-width: 40%;
+        height: 200px;
+    }
+}
